// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test car data retrieval should get 2 cars from db 1`] = `
Array [
  Object {
    "client_id": null,
    "dkm": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "produce_year": "1992",
    "rama": "YGHJHKLLOLIHGHG",
  },
  Object {
    "client_id": null,
    "dkm": "CA7474KA",
    "id": 4602,
    "mark_name": "Audi",
    "model_name": "A8",
    "produce_year": "2008",
    "rama": "WVWEZZZ1HZRW206119",
  },
]
`;

exports[`Test car data retrieval should get a car from db 1`] = `
Object {
  "data": Object {
    "client_id": null,
    "dkm": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "produce_year": "1992",
    "rama": "YGHJHKLLOLIHGHG",
  },
}
`;

exports[`Test car data retrieval should get cars from db with pagination 1`] = `
Array [
  Object {
    "client_id": null,
    "dkm": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "produce_year": "1992",
    "rama": "YGHJHKLLOLIHGHG",
  },
  Object {
    "client_id": null,
    "dkm": "CA7474KA",
    "id": 4602,
    "mark_name": "Audi",
    "model_name": "A8",
    "produce_year": "2008",
    "rama": "WVWEZZZ1HZRW206119",
  },
]
`;

exports[`Test car data retrieval should get cars from db with sorting 1`] = `
Array [
  Object {
    "client_id": null,
    "dkm": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "produce_year": "1992",
    "rama": "YGHJHKLLOLIHGHG",
  },
  Object {
    "client_id": null,
    "dkm": "CA7474KA",
    "id": 4602,
    "mark_name": "Audi",
    "model_name": "A8",
    "produce_year": "2008",
    "rama": "WVWEZZZ1HZRW206119",
  },
]
`;

exports[`Test companies data retrieval should get 2 companies from db 1`] = `
Array [
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "131304899",
    "city": "СОФИЯ",
    "client_name": "СИ ЕФ ЕМ ООД  ",
    "floor": "0",
    "id": 9251,
    "mobile": "359889100001",
    "municipality_name": "Столична",
    "phone": "359889100001",
    "postcode": "1000",
    "region_name": "София (столица)",
    "representative": "1",
    "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
    "street_no": "0",
    "vehicle_ids": "6003,6157,7368,534737,828833,829572,829929,1528401,1564742,1623274,1651107,1655869,1661547,1674812,1676459,1687766,1746879,1749209,1755759,1778061,1791273,1808684,1817960,1837693,1837696,1841973,1886048,1905375,1926652,2013426,2110795,2114331,2207729,2234344,2261575,2316075,2325492,2433843,2465044,2500953,2542927,2603590,2621869,2952511",
    "vhod": "0",
  },
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "175153616",
    "city": "ЛОЗЕН",
    "client_name": "Бонев Транс ЕООД  ",
    "floor": "0",
    "id": 9351,
    "mobile": "0",
    "municipality_name": "Столична",
    "phone": "0",
    "postcode": "1151",
    "region_name": "София (столица)",
    "representative": "Генади Стефанов Бонев",
    "street_name": "ЯНКО ПАНАЙОТОВ",
    "street_no": "28",
    "vehicle_ids": "6001,1687957,1863595",
    "vhod": "0",
  },
]
`;

exports[`Test companies data retrieval should get a company from db 1`] = `
Object {
  "apartment": "0",
  "blok": "0",
  "bulstat": "131304899",
  "city": "СОФИЯ",
  "client_name": "СИ ЕФ ЕМ ООД  ",
  "floor": "0",
  "id": 9251,
  "mobile": "359889100001",
  "municipality_name": "Столична",
  "phone": "359889100001",
  "postcode": "1000",
  "region_name": "София (столица)",
  "representative": "1",
  "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
  "street_no": "0",
  "vehicle_ids": "6003,6157,7368,534737,828833,829572,829929,1528401,1564742,1623274,1651107,1655869,1661547,1674812,1676459,1687766,1746879,1749209,1755759,1778061,1791273,1808684,1817960,1837693,1837696,1841973,1886048,1905375,1926652,2013426,2110795,2114331,2207729,2234344,2261575,2316075,2325492,2433843,2465044,2500953,2542927,2603590,2621869,2952511",
  "vhod": "0",
}
`;

exports[`Test companies data retrieval should get companies from db with pagination 1`] = `
Array [
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "131304899",
    "city": "СОФИЯ",
    "client_name": "СИ ЕФ ЕМ ООД  ",
    "floor": "0",
    "id": 9251,
    "mobile": "359889100001",
    "municipality_name": "Столична",
    "phone": "359889100001",
    "postcode": "1000",
    "region_name": "София (столица)",
    "representative": "1",
    "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
    "street_no": "0",
    "vehicle_ids": "6003,6157,7368,534737,828833,829572,829929,1528401,1564742,1623274,1651107,1655869,1661547,1674812,1676459,1687766,1746879,1749209,1755759,1778061,1791273,1808684,1817960,1837693,1837696,1841973,1886048,1905375,1926652,2013426,2110795,2114331,2207729,2234344,2261575,2316075,2325492,2433843,2465044,2500953,2542927,2603590,2621869,2952511",
    "vhod": "0",
  },
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "175153616",
    "city": "ЛОЗЕН",
    "client_name": "Бонев Транс ЕООД  ",
    "floor": "0",
    "id": 9351,
    "mobile": "0",
    "municipality_name": "Столична",
    "phone": "0",
    "postcode": "1151",
    "region_name": "София (столица)",
    "representative": "Генади Стефанов Бонев",
    "street_name": "ЯНКО ПАНАЙОТОВ",
    "street_no": "28",
    "vehicle_ids": "6001,1687957,1863595",
    "vhod": "0",
  },
]
`;

exports[`Test companies data retrieval should get companies from db with sorting 1`] = `
Array [
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "131304899",
    "city": "СОФИЯ",
    "client_name": "СИ ЕФ ЕМ ООД  ",
    "floor": "0",
    "id": 9251,
    "mobile": "359889100001",
    "municipality_name": "Столична",
    "phone": "359889100001",
    "postcode": "1000",
    "region_name": "София (столица)",
    "representative": "1",
    "street_name": "УЛ. НИКОЛАЙ ХАЙТОВ БЛ. 2, ВХ. Д, ОФИСИ 8 И 9",
    "street_no": "0",
    "vehicle_ids": "6003,6157,7368,534737,828833,829572,829929,1528401,1564742,1623274,1651107,1655869,1661547,1674812,1676459,1687766,1746879,1749209,1755759,1778061,1791273,1808684,1817960,1837693,1837696,1841973,1886048,1905375,1926652,2013426,2110795,2114331,2207729,2234344,2261575,2316075,2325492,2433843,2465044,2500953,2542927,2603590,2621869,2952511",
    "vhod": "0",
  },
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "175153616",
    "city": "ЛОЗЕН",
    "client_name": "Бонев Транс ЕООД  ",
    "floor": "0",
    "id": 9351,
    "mobile": "0",
    "municipality_name": "Столична",
    "phone": "0",
    "postcode": "1151",
    "region_name": "София (столица)",
    "representative": "Генади Стефанов Бонев",
    "street_name": "ЯНКО ПАНАЙОТОВ",
    "street_no": "28",
    "vehicle_ids": "6001,1687957,1863595",
    "vhod": "0",
  },
]
`;

exports[`Test persons data retrieval should get 2 persons from db 1`] = `
Array [
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "6104266565",
    "city": "РУСЕ",
    "client_name": "Юрий Николов Величков",
    "floor": "1",
    "id": 9213,
    "mobile": "0889827210",
    "municipality_name": "Русе",
    "phone": "9294130",
    "postcode": "7000",
    "region_name": "РУСЕ",
    "representative": "",
    "street_name": "СЛАВЯНСКИ",
    "street_no": "14",
    "vehicle_ids": null,
    "vhod": "1",
  },
  Object {
    "apartment": "2",
    "blok": "18",
    "bulstat": "6310305565",
    "city": "СИЛИСТРА",
    "client_name": "First Middle Last",
    "floor": "1",
    "id": 9219,
    "mobile": "0891043493",
    "municipality_name": "Силистра",
    "phone": "02830123",
    "postcode": "7500",
    "region_name": "СИЛИСТРА",
    "representative": "",
    "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
    "street_no": "",
    "vehicle_ids": null,
    "vhod": "А",
  },
]
`;

exports[`Test persons data retrieval should get a person from db 1`] = `
Object {
  "apartment": "0",
  "blok": "0",
  "bulstat": "6104266565",
  "city": "РУСЕ",
  "client_name": "Юрий Николов Величков",
  "floor": "1",
  "id": 9213,
  "mobile": "0889827210",
  "municipality_name": "Русе",
  "phone": "9294130",
  "postcode": "7000",
  "region_name": "РУСЕ",
  "representative": "",
  "street_name": "СЛАВЯНСКИ",
  "street_no": "14",
  "vehicle_ids": null,
  "vhod": "1",
}
`;

exports[`Test persons data retrieval should get persons from db with pagination 1`] = `
Array [
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "6104266565",
    "city": "РУСЕ",
    "client_name": "Юрий Николов Величков",
    "floor": "1",
    "id": 9213,
    "mobile": "0889827210",
    "municipality_name": "Русе",
    "phone": "9294130",
    "postcode": "7000",
    "region_name": "РУСЕ",
    "representative": "",
    "street_name": "СЛАВЯНСКИ",
    "street_no": "14",
    "vehicle_ids": null,
    "vhod": "1",
  },
  Object {
    "apartment": "2",
    "blok": "18",
    "bulstat": "6310305565",
    "city": "СИЛИСТРА",
    "client_name": "First Middle Last",
    "floor": "1",
    "id": 9219,
    "mobile": "0891043493",
    "municipality_name": "Силистра",
    "phone": "02830123",
    "postcode": "7500",
    "region_name": "СИЛИСТРА",
    "representative": "",
    "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
    "street_no": "",
    "vehicle_ids": null,
    "vhod": "А",
  },
]
`;

exports[`Test persons data retrieval should get persons from db with sorting 1`] = `
Array [
  Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "6104266565",
    "city": "РУСЕ",
    "client_name": "Юрий Николов Величков",
    "floor": "1",
    "id": 9213,
    "mobile": "0889827210",
    "municipality_name": "Русе",
    "phone": "9294130",
    "postcode": "7000",
    "region_name": "РУСЕ",
    "representative": "",
    "street_name": "СЛАВЯНСКИ",
    "street_no": "14",
    "vehicle_ids": null,
    "vhod": "1",
  },
  Object {
    "apartment": "2",
    "blok": "18",
    "bulstat": "6310305565",
    "city": "СИЛИСТРА",
    "client_name": "First Middle Last",
    "floor": "1",
    "id": 9219,
    "mobile": "0891043493",
    "municipality_name": "Силистра",
    "phone": "02830123",
    "postcode": "7500",
    "region_name": "СИЛИСТРА",
    "representative": "",
    "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
    "street_no": "",
    "vehicle_ids": null,
    "vhod": "А",
  },
]
`;
